// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The product naics code association component renders a list of naics codes and a helper message when no naics is selected 1`] = `
Array [
  <div
    className="mb-5 row"
  >
    <div
      className="col-md-auto col"
    >
      <a
        className="jsx-4064971042 alert-link"
        href="/admin/naics-codes"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Manage Industry (NAICS) Codes
      </a>
    </div>
    <div
      className="col"
    >
      <a
        className="jsx-4064971042 alert-link"
        href="/admin/products-benchmarks"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Manage Products
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card"
      >
        <div
          className="bc-card-header card-header"
        >
          Select an Industry (NAICS) code:
        </div>
        Array [
          <div
            className="jsx-3751310415 scrollable"
            tabIndex={0}
          >
            <div
              className="list-group list-group-flush"
              onKeyDown={[Function]}
            >
              <button
                className="list-group-item list-group-item-action"
                data-rb-event-key={null}
                disabled={false}
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                test code
                <br
                  className="jsx-3751310415"
                />
                <b
                  className="jsx-3751310415"
                >
                  123
                </b>
              </button>
            </div>
          </div>,
          "",
          "",
        ]
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          Please select a NAICS code on the left to add allowable products
        </div>
      </div>
    </div>
  </div>,
  "",
]
`;

exports[`The product naics code association component renders the associated components when a naics is selected 1`] = `
Array [
  <div
    className="mb-5 row"
  >
    <div
      className="col-md-auto col"
    >
      <a
        className="jsx-4064971042 alert-link"
        href="/admin/naics-codes"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Manage Industry (NAICS) Codes
      </a>
    </div>
    <div
      className="col"
    >
      <a
        className="jsx-4064971042 alert-link"
        href="/admin/products-benchmarks"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Manage Products
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card"
      >
        <div
          className="bc-card-header card-header"
        >
          Select an Industry (NAICS) code:
        </div>
        Array [
          <div
            className="jsx-3751310415 scrollable"
            tabIndex={0}
          >
            <div
              className="list-group list-group-flush"
              onKeyDown={[Function]}
            >
              <button
                className="list-group-item active list-group-item-action"
                data-rb-event-key={null}
                disabled={false}
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                test code
                <br
                  className="jsx-3751310415"
                />
                <b
                  className="jsx-3751310415"
                >
                  1234
                </b>
              </button>
            </div>
          </div>,
          "",
          "",
        ]
      </div>
    </div>
    <div
      className="col-md-8"
    />
  </div>,
  "",
]
`;
